<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.idatt2105</groupId>
	<artifactId>backend</artifactId>
	<version>1.1</version>
	<name>backend</name>
	<description>Backend for IDATT2105 Project</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>8.0.1.Final</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.3.0</version>
		</dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.4.0</version>
   </dependency>
   <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>3.12.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>runtime</scope>
  	</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-crypto</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.12.687</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.43.0</version>
        <executions>
            <execution>
                <id>format</id>
                <phase>process-sources</phase>
                <goals>
                    <goal>check</goal>
                    <goal>apply</goal>
                </goals>
            </execution>
        </executions>
        <configuration>
            <java>
                <!-- These are the defaults, you can override if you want -->
                <includes>
                    <include>src/main/java/**/*.java</include>
                    <include>src/test/java/**/*.java</include>
                </includes>

                <!-- Cleanthat will refactor your code, but it may break your style: apply it before your formatter -->
                <cleanthat />        <!-- has its own section below -->

                <googleJavaFormat/>

                <importOrder>
                    <!-- or a custom ordering -->
                    <wildcardsLast>false</wildcardsLast>
                    <!-- Optional, default false. Sort wildcard import after specific imports -->
                    <order>java|javax,org,com,com.diffplug,,\#com.diffplug,\#</order>
                    <!-- or use <file>${project.basedir}/eclipse.importorder</file> -->
                    <!-- you can use an empty string for all the imports you didn't specify explicitly,
                        '|' to join group without blank line, and '\#` prefix for static imports. -->
                    <semanticSort>false</semanticSort>
                    <!-- Optional, default false. Sort by package, then class, then member (for static imports).
                        Splitting is based on common conventions (packages are lower case, classes start with upper case).
                        Use <treatAsPackage> and <treatAsClass> for exceptions. -->
                    <treatAsPackage>
                        <!-- Packages starting with upper case letters. -->
                        <package>com.example.MyPackage</package>
                    </treatAsPackage>
                    <treatAsClass>
                        <!-- Classes starting with lower case letters. -->
                        <class>com.example.myClass</class>
                    </treatAsClass>
                </importOrder>

                <removeUnusedImports />

                <formatAnnotations />
            </java>
        </configuration>
    </plugin>
				<plugin>
					<groupId>com.cosium.code</groupId>
					<artifactId>git-code-format-maven-plugin</artifactId>
					<version>5.3</version>
					<executions>
						<execution>
							<goals>
								<goal>install-hooks</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.8</version> <!-- Adjust version as needed -->
					<executions>
						<execution>
							<id>prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
		</plugins>
	</build>

</project>
